Fix : fix query dsl gradle